# TimerApps-CLI

./: .gitignore  ADB_NOTIFICATION_GUIDE.md  DAEMON_MODE.md  LICENSE  QUICKSTART.md  README.md  TERMUX_INSTALL.md  WORKFLOW_DESIGN.md  pyproject.toml
src/: __init__.py  adb_handler.py  app_monitor.py  config_manager.py  daemon_manager.py  exceptions.py  main.py  notifications.py  utils.py
src/cli/: click_cli.py
src/ui/: textual_dashboard.py
test/: conftest.py  test_adb_handler.py  test_adb_handler_suite.py  test_adb_notification_debug.py  test_adb_notification_send.py  test_app_monitor_suite.py  test_cli_direct.py  test_cli_set.py  test_config_manager_suite.py  test_daemon_manager.py  test_detection.py  test_get_active_app.py  test_notifications_adb_fallback.py  test_parsing.py
